# SmartRouter

./: README.md  hacs.json  pyproject.toml  repository.yaml
addon/catalog-router-semantic/: Dockerfile  README.md  config.yaml  requirements.txt  run.sh
addon/catalog-router-semantic/app/: __init__.py  server.py
custom_components/catalog_conversation_router/: __init__.py  agent_router.py  catalog.py  catalog_sources.py  config_flow.py  const.py  conversation.py  diagnostics.py  ha_conversation_agents.py  llm_adapter.py  local_agent_adapter.py  local_intent.py  manifest.json  matcher.py  models.py  phonetics.py  phrase_renderer.py  safety.py  semantic_intent.py  semantic_service.py  services.py  services.yaml  strings.json  trace_store.py
custom_components/catalog_conversation_router/translations/: en.json
tests/: test_catalog.py  test_config_flow.py  test_conversation.py  test_llm_adapter.py  test_local_intent.py  test_matcher.py  test_phrase_renderer.py  test_router.py  test_safety.py  test_semantic_service_cache.py  test_services.py
tmp_hacs/: conversation_merged.patch  conversation_merged.py
