[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catalog-conversation-router"
version = "0.1.0"
description = "Home Assistant custom integration for catalog-grounded conversation routing"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
